feat(home): create home page
	Add home page with layout and navigation buttons for other pages.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "ESNext.AsyncIterable",
       "DOM"
     ],
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
@@ -24,6 +25,7 @@
       ]
     },
     "types": [
+      "jest",
       "@nuxt/types",
       "@types/node"
     ]
