--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest --maxWorkers=50%",
+    "test:coverage": "jest --collect-coverage",
+    "test:watch": "jest --watch --maxWorkers=25%"
   },
   "dependencies": {
     "@nuxtjs/composition-api": "^0.23.4",
@@ -23,6 +25,7 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.0.1",
+    "@types/jest": "^26.0.23",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
