--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "vue-fragment": "^1.5.2"
+    "vue-frag": "^1.1.5"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
