docs(readme): add coverage badges

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,9 @@ jobs:
 
       - name: Run tests 🧪
         run: npm run test
+
+      - name: Run coverage %
+        run: npm run test:coverage
+
+      - name: Set badges
+        run:  npx jest-coverage-badges
