--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "npm run lint:js",
     "test": "jest --maxWorkers=50%",
     "test:coverage": "jest --collect-coverage",
-    "test:watch": "jest --watch --maxWorkers=25%"
+    "test:watch": "jest --watch --maxWorkers=25%",
+    "test:badges": "npm run test:coverage && jest-coverage-badges"
   },
   "dependencies": {
     "@nuxtjs/composition-api": "^0.23.4",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
+    "jest-coverage-badges": "^1.1.2",
     "nuxt": "^2.15.3",
     "vue-frag": "^1.1.5"
   },
